--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -18,14 +18,14 @@
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/html/index.html" class="nav__logo">
+            <a href="/index.html" class="nav__logo">
                 <h1>NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link active-link">About</a>
+                        <a href="/index.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
@@ -56,6 +56,8 @@
         </ul>
     </h3>
     </div>
+    <!-- width="1000" height="500" -->
+    <iframe height="500" frameborder="0" src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao" scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames. Please visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao" target="_blank">Front-end developer</a> on MindMeister.</iframe>
     <div class="footer">
         <div class="pa about">
             <h2>Contact Us</h2>
