--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== ICONS ===============-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
     <!--=============== CSS ===============-->
@@ -26,7 +27,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="./html/aboutUs.html" class="nav__link active-link">About</a>
+                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
                         <a href="./html/roadmapIntro.html" class="nav__link">Roadmaps</a>
