--- a/html/profile.html
+++ b/html/profile.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">
+            <a href="/index.html" class="nav__logo">
                 <h1> NARA </h1>
             </a>
 
