--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/roadmap.css">
+
 
     <title>NARA</title>
 </head>
