--- a/html/profile.html
+++ b/html/profile.html
@@ -118,7 +118,7 @@
     <!--=============== SCROLL REVEAL===============-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
