--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -46,18 +46,25 @@
 
     <div class="main_intro_aboutUs">
         <h3> NARA 1.0
-        To provide career roadmaps for STEM subjects to give a bird’s-eye view on Computer Science (Web Development) and
-        Data Analysis careers
-        <ul>
-        <li> To provide personalized learning experience based on users’ preferences and needs </li>
-        To provide immersive experience through project-based, simulated learning so that users can role-play as a Web
-        Developer and a Data Scientist
-        Following our guidance, NARA 1.0 users should be able to understand basic terminologies in Web Development/ Data Science, execute the most basic tasks that a Web Developer or a Data Scientist does, know where to look for more information to dig deeper, find a community for support and exchange
-        </ul>
-    </h3>
+            To provide career roadmaps for STEM subjects to give a bird’s-eye view on Computer Science (Web Development)
+            and
+            Data Analysis careers
+            <ul>
+                <li> To provide personalized learning experience based on users’ preferences and needs </li>
+                To provide immersive experience through project-based, simulated learning so that users can role-play as
+                a Web
+                Developer and a Data Scientist
+                Following our guidance, NARA 1.0 users should be able to understand basic terminologies in Web
+                Development/ Data Science, execute the most basic tasks that a Web Developer or a Data Scientist does,
+                know where to look for more information to dig deeper, find a community for support and exchange
+            </ul>
+        </h3>
     </div>
-    <!-- width="1000" height="500" -->
-    <iframe height="500" frameborder="0" src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao" scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames. Please visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao" target="_blank">Front-end developer</a> on MindMeister.</iframe>
+    <iframe height="500" max-width="100%" frameborder="0"
+        src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
+        scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames. Please
+        visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
+            target="_blank">Front-end developer</a> on MindMeister.</iframe>
     <div class="footer">
         <div class="pa about">
             <h2>Contact Us</h2>
