--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="./html/roadmapIntro.html" class="nav__link">Roadmaps</a>
+                        <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="./html/profile.html" class="nav__link">Sign In</a>
+                        <a href="/html/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
