--- a/html/roadmapIntro.html
+++ b/html/roadmapIntro.html
@@ -54,36 +54,17 @@
                     <!-- <i class="far fa-file-code skill_icon"></i> -->
                     <div class="skill_title">
                         <h1> First, take our test now! </h1>
-                        <span class="skill_subtitle"> <h3> 15 minutes to better understand roadmaps and access the path to your success </h3> </span>
+                        <span class="skill_subtitle">
+                            <h3> 15 minutes to better understand roadmaps and access the path to your success </h3>
+                        </span>
                         <button class="button_testPage"> Test now </button>
                     </div>
-                    <i class="fas fa-angle-down skill_arrow"></i>
-
                 </div>
-                <!-- <div class="skill_list grid">
-                    <div class="skill__data">
-                        <div class="skill_title">
-                            <h3>Back-end developer </h3>
-                            <span class="skill_number">90% </span>
-                        </div>
-                        <div class="skill_bar">
-                            <span class="skill_percentage skill_html"></span>
-                        </div>
-                    </div>
-                    <div class="skill__data">
-                        <div class="skill_title">
-                            <h3>Back-end developer </h3>
-                            <span class="skill_number">80% </span>
-                        </div>
-                        <div class="skill_bar">
-                            <span class="skill_percentage skill_css"></span>
-                        </div>
-                    </div>
-                </div> -->
+
             </div>
             <div class="roadmap_title">
-            <h2> Our available Roadmaps </h2>
-            <div class="roadmap_title_base"></div>
+                <h2> Our available Roadmaps </h2>
+                <div class="roadmap_title_base"></div>
             </div>
             <div class="skill_container container grid">
                 <div class="skill_content skills_close">
@@ -141,7 +122,7 @@
                             <h1> Data Analyst </h1>
                         </div>
                         <i class="fas fa-angle-down skill_arrow"></i>
-    
+
                     </div>
                     <div class="skill_list grid">
                         <div class="skill__data">
