--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
         </nav>
     </header>
 
-    <div class="main">
-        <div class="main_intro">
-            <div class="intro_content">
+    <div class="main-page">
+        <div class="main-page-intro">
+            <div class="main-page-intro-content">
                 <h2> We make STEM career more accessible for 23 millions Vietnamese youth who aspire to work in these fields but face barriers </h2>
-                <a href="/html/roadmapIntro.html"><button class="button1"> See our roadmaps </button></a>
+                <a href="/html/roadmapIntro.html"><button class="main-page-button1"> See our roadmaps </button></a>
             </div>
-            <img class="intro_picture" src="/img/output-onlinepngtools.png">
+            <img class="main-page-intro-picture" src="/img/output-onlinepngtools.png">
         </div>
-        <div class="second_intro">
-            <img class="second_picture" src="/img/secondpic.png">
-            <div class="second_content">
+        <div class="main-page-second_intro">
+            <img class="main-page-second-intro-picture" src="/img/secondpic.png">
+            <div class="main-page-second-intro-content">
                 <h2> Get the best roadmaps for your success</h2>
                 <ul>
                     <li>Suggestion Making </li>
@@ -66,13 +66,13 @@
                     <li>Step-by-step problem solving guidance </li>
                     <li>Personalized motivational feedback delivered visually on Learners’ Profile </li>
                 </ul>
-                <button class="button2"> Take your test now </button>
+                <button class="main-page-button2"> Take your test now </button>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <div class="pa about">
+        <div class="footer-top">
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
             <ul class="social-media">
@@ -82,7 +82,7 @@
                 <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
             </ul>
         </div>
-        <form class="form_footer" action="vuhachau2412@email.com" method="POST">
+        <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
             <div class="form-info">
                 <div class="form-email">
                     <h2> Email </h2>
@@ -96,7 +96,7 @@
             <div class="form-message">
                 <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
             </div>
-            <button class="button_footer" type="submit">Send</button>
+            <button class="footer-form-button" type="submit">Send</button>
 
         </form>
     </div>
