--- a/html/afterlogin/profile.html
+++ b/html/afterlogin/profile.html
@@ -5,33 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Profile</title>
     <!--=============== ICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
     <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
-
-    <title>NARA</title>
 </head>
 
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/index.html" class="nav__logo">
-                <h1>NARA </h1>
+            <a href="" class="nav__logo">
+                <h1> NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/index.html" class="nav__link active-link">About</a>
+                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="#discover" class="nav__link"> User A </a>
                     </li>
                 </ul>
 
@@ -44,29 +44,50 @@
         </nav>
     </header>
 
-    <div class="aboutus-main-intro">
-        <h3> NARA 1.0
-            To provide career roadmaps for STEM subjects to give a bird’s-eye view on Computer Science (Web Development)
-            and
-            Data Analysis careers
-            <ul>
-                <li> To provide personalized learning experience based on users’ preferences and needs </li>
-                To provide immersive experience through project-based, simulated learning so that users can role-play as
-                a Web
-                Developer and a Data Scientist
-                Following our guidance, NARA 1.0 users should be able to understand basic terminologies in Web
-                Development/ Data Science, execute the most basic tasks that a Web Developer or a Data Scientist does,
-                know where to look for more information to dig deeper, find a community for support and exchange
-            </ul>
-        </h3>
+    <div class="user-profile">
+        <div class="user-profile-info">
+            <div class="user-profile-info-text">
+                <h1> Your Dashboard </h1>
+                <div class="intro-line"></div>
+
+                <div class="user-profile-info-test-opener">
+
+                    <h2> But first, take our test now! </h2>
+                    <span class="skill_subtitle">
+                        <h3> 15 minutes to better understand roadmaps and access the path to your success </h3>
+                    </span>
+                    <button class="button-profile-test-opener"> Test now </button>
+                </div>
+                <div class="user-profile-info-text character-box">
+                    <h3> You are The Organized Analyst! </h3>
+
+                    <h4>Organized Analysts are thinkers. They may consider themselves inquisitive, analytical,
+                        practical, or efficient. They probably like to solve abstract problems, conduct research, and
+                        organize information. They may value dependability, innovation, and precision. Organized
+                        Analysts would thrive in a structured career that is research and task-oriented.</h4>
+                </div>
+            </div>
+
+            <h3> Selected Roadmaps </h3>
+            <div class="intro-line"></div>
+
+            <div class="user-profile-info-selected-roadmap">
+
+                <div class="user-profile-info-selected-roadmap roadmap1">
+                    <h3> Data Analyst </h3>
+                </div>
+                <div class="user-profile-info-selected-roadmap roadmap2">
+                    <h3> Software Developer </h3>
+                </div>
+            </div>
+        </div>
+        <div class="user-profile lastest-quiz-result">
+            <h2> Your lastest match is </h2>
+            <h1>Data Analyst</h1>
+        </div>
     </div>
-    <!-- <iframe height="500" max-width="100%" frameborder="0"
-        src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
-        scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames. Please
-        visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
-            target="_blank">Front-end developer</a> on MindMeister.</iframe> -->
     <div class="footer">
-        <div class="pa about">
+        <div class="footer-top">
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
             <ul class="social-media">
@@ -76,7 +97,7 @@
                 <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
             </ul>
         </div>
-        <form class="form_footer" action="vuhachau2412@email.com" method="POST">
+        <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
             <div class="form-info">
                 <div class="form-email">
                     <h2> Email </h2>
@@ -90,7 +111,7 @@
             <div class="form-message">
                 <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
             </div>
-            <button class="button_footer" type="submit">Send</button>
+            <button class="footer-form-button" type="submit">Send</button>
 
         </form>
     </div>
