--- a/html/beforelogin/frontendbeforelog.html
+++ b/html/beforelogin/frontendbeforelog.html
@@ -8,9 +8,14 @@
 
     <!--=============== ICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/softwarebeforelog.css">
+
+    <!-- <link rel="stylesheet" href="/css/roadmap.css"> -->
+
 
     <title>NARA</title>
 </head>
@@ -25,7 +30,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/index.html" class="nav__link active-link">About</a>
+                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
@@ -43,30 +48,42 @@
             </div>
         </nav>
     </header>
+    <div class="software-page-main">
+        <div class="software-page-test-opener">
+            <div class="software-page-test-opener-header">
+                <h1> First, take our test now! </h1>
+                <span class="software-page-test-opener-subtitle">
+                    <h3> 15 minutes to better understand roadmaps and access the path to your success </h3>
+                </span>
+                <button class="software-page-test-opener-button"> Test now </button>
+            </div>
 
-    <div class="aboutus-main-intro">
-        <h3> NARA 1.0
-            To provide career roadmaps for STEM subjects to give a bird’s-eye view on Computer Science (Web Development)
-            and
-            Data Analysis careers
-            <ul>
-                <li> To provide personalized learning experience based on users’ preferences and needs </li>
-                To provide immersive experience through project-based, simulated learning so that users can role-play as
-                a Web
-                Developer and a Data Scientist
-                Following our guidance, NARA 1.0 users should be able to understand basic terminologies in Web
-                Development/ Data Science, execute the most basic tasks that a Web Developer or a Data Scientist does,
-                know where to look for more information to dig deeper, find a community for support and exchange
-            </ul>
-        </h3>
+        </div>
+        <div class="software-page-title">
+            <h1> Front-end Developer Roadmap</h1>
+            <h3> Front-end Developer is one a part of a Software Developer (which includes Front-end and Back-end). Front-end Developers are people who love designing, creating, and are dedicated to bring the best experience to software clients/users</h3>
+            <h3> You can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Software Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>
+        </div>
+        <div class="software-page-content">
+            <iframe height="500" max-width="100%" frameborder="0"
+                src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
+                scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
+                Please
+                visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
+                    target="_blank">Front-end developer</a> on MindMeister.</iframe>
+            <div class="software-page-content-text">
+                <div class="software-page-content-text-top"> 
+                    <h1> One more step! </h1>
+                    <h2> This is the full roadmap to become a full-stack software developer. 
+                        <br> 
+                        <br>
+                   But  <span class="sign-up">  sign up</span> to access your simplified, personalized roadmaps based on your characteristics, plus our role-play exercise to better enhance your career </h2></div>
+            </div>
+        </div>
     </div>
-    <!-- <iframe height="500" max-width="100%" frameborder="0"
-        src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
-        scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames. Please
-        visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
-            target="_blank">Front-end developer</a> on MindMeister.</iframe> -->
+
     <div class="footer">
-        <div class="pa about">
+        <div class="footer-top">
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
             <ul class="social-media">
@@ -76,7 +93,7 @@
                 <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
             </ul>
         </div>
-        <form class="form_footer" action="vuhachau2412@email.com" method="POST">
+        <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
             <div class="form-info">
                 <div class="form-email">
                     <h2> Email </h2>
@@ -90,7 +107,7 @@
             <div class="form-message">
                 <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
             </div>
-            <button class="button_footer" type="submit">Send</button>
+            <button class="footer-form-button" type="submit">Send</button>
 
         </form>
     </div>
@@ -98,6 +115,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--=============== MAIN JS ===============-->
     <script src="/js/main.js"></script>
+
 </body>
 
 </html>
