--- a/html/beforelogin/dsbeforelog.html
+++ b/html/beforelogin/dsbeforelog.html
@@ -72,7 +72,8 @@
                 visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
                     target="_blank">Front-end developer</a> on MindMeister.</iframe>
             <div class="software-page-content-text">
-                <div class="software-page-content-text-top"> 
+                <div class="software-page-content-text-top">
+                    <h1> Do not know what you are suitable for yet? </h1> 
                     <h1> One more step! </h1>
                     <h2> This is the full roadmap to become a data analyst. 
                         <br> 
