--- a/html/afterlogin/frontendafterlog.html
+++ b/html/afterlogin/frontendafterlog.html
@@ -8,11 +8,10 @@
      <!--=============== ICONS ===============-->
      <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/softwareafter.css">
     <link rel="stylesheet" href="/css/frontend.css">
-
 </head>
 
 <body>
