--- a/html/beforelogin/fullstkbeforelog.html
+++ b/html/beforelogin/fullstkbeforelog.html
@@ -61,27 +61,33 @@
         </div>
         <div class="software-page-title">
             <h1> Full-stack Developer Roadmap</h1>
-            <h3> Full-stack Software Developer who work in both Front-end and Back-end of software. </h3>
-            <h3> But you can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Front-end Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>            
-                <div class="software-page-title-line"></div>
+            <h3> </h3>
+            <h3> Full-stack developers learn and master both Front-end and Back-end. Therefore, the roadmap below
+                includes both front-end and back-end paths.
+                <br> But we recommend you check out our <span class="link-word" onclick="changeToSoftware()">Front-end
+                    Developer</span>, and <span class="link-word"> Backend Developer </span> roadmap seperately to get a
+                closer look into each field.
+            </h3>
+            <div class="software-page-title-line"></div>
         </div>
-        <div class="software-page-content">
-            <iframe height="500" max-width="100%" frameborder="0"
-                src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
-                scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
-                Please
-                visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
-                    target="_blank">Front-end developer</a> on MindMeister.</iframe>
-            <div class="software-page-content-text">
-                <div class="software-page-content-text-top"> 
+        <div class="software-page-content-text">
+
+            <div class="software-page-content">
+                <iframe width='853' height='480'
+                    src='https://embed.coggle.it/diagram/YP5oBJZ6QtsqEKxx/11a841cc56101c7380c6ecc4b4f000c3c1b3f4369712728320234f7366d0b7f6'
+                    frameborder='0' allowfullscreen></iframe>
+                <div class="software-page-content-text-top">
                     <h1> Do not know what you are suitable for yet? </h1>
                     <h1> One more step! </h1>
-                    <h3> This is the full roadmap to become a full-stack software developer. 
-                        <br> 
-                        <br>
-                   But  <span class="sign-up">  sign up</span> to access your simplified, personalized roadmaps based on your characteristics, plus our role-play exercise to better enhance your career </h3></div>
+                    <!-- <h3> This is the full roadmap to become a full-stack software developer.  -->
+                    <br>
+                    <br>
+                    <span class="sign-up"> Sign up</span> to access your simplified, personalized roadmaps based on your
+                    characteristics, plus our role-play exercise to better enhance your career </h3>
+                </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="footer">
