--- a/html/beforelogin/frontendbeforelog.html
+++ b/html/beforelogin/frontendbeforelog.html
@@ -61,23 +61,34 @@
         </div>
         <div class="software-page-title">
             <h1> Front-end Developer Roadmap</h1>
-            <h3> Front-end Developer is one a part of a Software Developer (which includes Front-end and Back-end). Front-end Developers are people who love designing, creating, and are dedicated to bring the best experience to software clients/users</h3>
-            <h3> You can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Software Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>
+            <h3> Front-end Developers are people who love designing, creating, and are dedicated to bring the best
+                experience to software clients/users</h3>
+            <h3> You can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Full-stack
+                    Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>
         </div>
         <div class="software-page-content">
-            <iframe height="500" max-width="100%" frameborder="0"
+            <!-- <iframe height="500" max-width="100%" frameborder="0"
                 src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
                 scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
                 Please
                 visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
-                    target="_blank">Front-end developer</a> on MindMeister.</iframe>
+                    target="_blank">Front-end developer</a> on MindMeister.</iframe> -->
+            <iframe width="600" height="400" frameborder="0"
+                src="https://www.mindmeister.com/maps/public_map_shell/1969654513/full-stack-developer?width=600&height=400&z=auto&t=WgWSOxihlM"
+                scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
+                Please visit <a href="https://www.mindmeister.com/1969654513/full-stack-developer?t=WgWSOxihlM"
+                    target="_blank">Full-Stack Developer</a> on MindMeister.</iframe>
+
             <div class="software-page-content-text">
-                <div class="software-page-content-text-top"> 
+                <div class="software-page-content-text-top">
                     <h1> One more step! </h1>
-                    <h2> This is the full roadmap to become a full-stack software developer. 
-                        <br> 
+                    <h2> This is the full roadmap to become a full-stack software developer.
                         <br>
-                   But  <span class="sign-up">  sign up</span> to access your simplified, personalized roadmaps based on your characteristics, plus our role-play exercise to better enhance your career </h2></div>
+                        <br>
+                        But <span class="sign-up"> sign up</span> to access your simplified, personalized roadmaps based
+                        on your characteristics, plus our role-play exercise to better enhance your career
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
