--- a/html/afterlogin/profile.html
+++ b/html/afterlogin/profile.html
@@ -31,7 +31,7 @@
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#discover" class="nav__link"> User A </a>
+                        <a href="/html/afterlogin/profile.html" class="nav__link"> User A </a>
                     </li>
                 </ul>
 
