--- a/html/beforelogin/backendbeforelog.html
+++ b/html/beforelogin/backendbeforelog.html
@@ -36,10 +36,9 @@
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
-
                 <i class="ri-close-line nav__close" id="nav-close"></i>
             </div>
 
@@ -66,6 +65,11 @@
             <div class="software-page-title-line"></div>
         </div>
         <div class="software-page-content">
+            <iframe width="600" height="400" frameborder="0"
+            src="https://www.mindmeister.com/maps/public_map_shell/1969654513/full-stack-developer?width=600&height=400&z=auto&t=WgWSOxihlM"
+            scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
+            Please visit <a href="https://www.mindmeister.com/1969654513/full-stack-developer?t=WgWSOxihlM"
+                target="_blank">Full-Stack Developer</a> on MindMeister.</iframe>
             <div class="software-page-content-text">
                 <div class="software-page-content-text-top"> 
                     <h1> Do not know what you are suitable for yet? </h1>
