--- a/html/beforelogin/dsbeforelog.html
+++ b/html/beforelogin/dsbeforelog.html
@@ -36,7 +36,7 @@
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
