--- a/html/beforelogin/frontendbeforelog.html
+++ b/html/beforelogin/frontendbeforelog.html
@@ -36,7 +36,7 @@
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
@@ -67,18 +67,7 @@
                     Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>
         </div>
         <div class="software-page-content">
-            <!-- <iframe height="500" max-width="100%" frameborder="0"
-                src="https://www.mindmeister.com/maps/public_map_shell/1967717359/front-end-developer?width=600&height=400&z=auto&t=QMZ4gukHao"
-                scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
-                Please
-                visit <a href="https://www.mindmeister.com/1967717359/front-end-developer?t=QMZ4gukHao"
-                    target="_blank">Front-end developer</a> on MindMeister.</iframe> -->
-            <iframe width="600" height="400" frameborder="0"
-                src="https://www.mindmeister.com/maps/public_map_shell/1969654513/full-stack-developer?width=600&height=400&z=auto&t=WgWSOxihlM"
-                scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
-                Please visit <a href="https://www.mindmeister.com/1969654513/full-stack-developer?t=WgWSOxihlM"
-                    target="_blank">Full-Stack Developer</a> on MindMeister.</iframe>
-
+                    <iframe width='853' height='480' src='https://embed.coggle.it/diagram/YP7F_pZ6QgclLSf5/56b7157db74dcd64b95ccfd3eb085e86cc563331f45ca2cbf4c5bdb7c9421328' frameborder='0' allowfullscreen></iframe>
             <div class="software-page-content-text">
                 <div class="software-page-content-text-top">
                     <h1> One more step! </h1>
