--- a/html/beforelogin/fullstkbeforelog.html
+++ b/html/beforelogin/fullstkbeforelog.html
@@ -36,7 +36,7 @@
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
@@ -73,10 +73,7 @@
         <div class="software-page-content-text">
 
             <div class="software-page-content">
-                <iframe width='853' height='480'
-                    src='https://embed.coggle.it/diagram/YP5oBJZ6QtsqEKxx/11a841cc56101c7380c6ecc4b4f000c3c1b3f4369712728320234f7366d0b7f6'
-                    frameborder='0' allowfullscreen></iframe>
-                <div class="software-page-content-text-top">
+                <iframe width='853' height='480' src='https://coggle.it/diagram/YP5oBJZ6QtsqEKxx/t/full-stack-developer-%E2%9D%A4%EF%B8%8F/11a841cc56101c7380c6ecc4b4f000c3c1b3f4369712728320234f7366d0b7f6' frameborder='0' allowfullscreen></iframe>                <div class="software-page-content-text-top">
                     <h1> Do not know what you are suitable for yet? </h1>
                     <h1> One more step! </h1>
                     <!-- <h3> This is the full roadmap to become a full-stack software developer.  -->
