--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -25,13 +25,13 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/index.html" class="nav__link active-link">About</a>
+                        <a href="./aboutUs.html" class="nav__link">About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
+                        <a href="./roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="./afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
@@ -61,7 +61,7 @@
         </h3>
     </div>
     <div class="footer">
-        <div class="pa about">
+        <div class="footer-top">
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
             <ul class="social-media">
@@ -71,7 +71,7 @@
                 <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
             </ul>
         </div>
-        <form class="form_footer" action="vuhachau2412@email.com" method="POST">
+        <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
             <div class="form-info">
                 <div class="form-email">
                     <h2> Email </h2>
@@ -85,7 +85,7 @@
             <div class="form-message">
                 <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
             </div>
-            <button class="button_footer" type="submit">Send</button>
+            <button class="footer-form-button" type="submit">Send</button>
 
         </form>
     </div>
