--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img class="main-page-intro-picture" src="/img/output-onlinepngtools.png">
         </div>
         <div class="main-page-second_intro">
-            <img class="main-page-second-intro-picture" src="/img/secondpic.png">
+            <img class="main-page-second-intro-picture" src="./img/roadma-demo.png">
             <div class="main-page-second-intro-content">
                 <h2> Get the best roadmaps for your success</h2>
                 <ul>
