--- a/html/roadmapIntro.html
+++ b/html/roadmapIntro.html
@@ -28,13 +28,13 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
+                        <a href="./aboutUs.html" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
+                        <a href="./roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
                     <li class="nav__item">
-                        <a href="/html/profile.html" class="nav__link">Sign In</a>
+                        <a href="./afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
                 <!-- <a href="./beforelogin/fullstkbeforelog.html"></a> -->
