--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <div class="main-page">
         <div class="main-page-intro">
             <div class="main-page-intro-content">
-                <h2> We make STEM career more accessible for 23 millions Vietnamese youth who aspire to work in these fields but face barriers </h2>
+                <h2> Our roadmaps make STEM more accessible to 23 million Vietnamese who want to work in these fields but face barriers </h2>
                 <a href="/html/roadmapIntro.html"><button class="main-page-button1"> See our roadmaps </button></a>
             </div>
-            <img class="main-page-intro-picture" src="/img/output-onlinepngtools.png">
+            <img class="main-page-intro-picture" src="./img/web-dev.png">
         </div>
         <div class="main-page-second_intro">
             <img class="main-page-second-intro-picture" src="./img/roadma-demo.png">
             <div class="main-page-second-intro-content">
-                <h2> Get the best roadmaps for your success</h2>
+                <h2> Làm bài trắc nghiệm để tìm roadmap phù hợp - con đường ngắn nhất dẫn đến thành công </h2>
                 <ul>
                     <li>Suggestion Making </li>
                     <li>Goal Setting with estimated completion time </li>
