--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -60,11 +60,11 @@
             </ul>
         </h3>
     </div>
-    <div class="footer">
+    <div class="footer footer-aboutus">
         <div class="footer-top">
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
-            <ul class="social-media">
+            <ul class="social-media social-media-aboutus">
                 <li><a href="http://facebook.com"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -85,7 +85,7 @@
             <div class="form-message">
                 <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
             </div>
-            <button class="footer-form-button" type="submit">Send</button>
+            <button class="footer-form-button footer-form-button-aboutus" type="submit">Send</button>
 
         </form>
     </div>
