--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img class="main-page-intro-picture" src="./img/web-dev.png">
         </div>
         <div class="main-page-second_intro">
-            <img class="main-page-second-intro-picture" src="./img/roadma-demo.png">
+            <img class="main-page-second-intro-picture" src="./img/roadmap-two.png">
             <div class="main-page-second-intro-content">
                 <h2> Làm bài trắc nghiệm để tìm roadmap phù hợp - con đường ngắn nhất dẫn đến thành công </h2>
                 <ul>
