--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/tree-solid.svg">
 
     <!--=============== ICONS ===============-->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
     <!--=============== CSS ===============-->
@@ -43,7 +43,7 @@
             </div>
 
             <div class="nav__toggle" id="nav-toggle">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i>            
             </div>
         </nav>
     </header>
@@ -101,7 +101,7 @@
         </form>
     </div>
     <!--=============== SCROLL REVEAL===============-->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./js/scrollreveal.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
